kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-remote-write
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - prometheus-rw.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/write
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
